--- a/VideoApi/package.json
+++ b/VideoApi/package.json
@@ -12,10 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.0",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "socketio": "^1.0.0",
+    "socket.io": "^3.0.4",
     "twilio": "^3.51.0",
     "twilio-cli": "^2.13.0"
   },
