front-end update

--- a/VideoApi/.env
+++ b/VideoApi/.env
@@ -4,4 +4,5 @@ ACCOUNT_SID = AC6e45c3877691fd81ae71c23d5a2524e7
 API_KEY = mB98j6brC6Zza73Hs2onFe5Fh
 API_SECRET = yirBKGgGn0IwCEixrfod4dbB3PJJK2X8DAyL6jSD9DstRLy11N
 BEARER_TOKEN = 7c684545141ba4f7314bf0f2093f3249
+AUTH_TOKEN = d0c41a0a3114d6112aae4f85adc46e47
 NODE_ENV = DEVELOPMENT
