updated full stack

--- a/VideoApi/config/.env
+++ b/VideoApi/config/.env
@@ -6,3 +6,8 @@ API_SECRET = yirBKGgGn0IwCEixrfod4dbB3PJJK2X8DAyL6jSD9DstRLy11N
 BEARER_TOKEN = 7c684545141ba4f7314bf0f2093f3249
 AUTH_TOKEN = d0c41a0a3114d6112aae4f85adc46e47
 NODE_ENV = DEVELOPMENT
+PGUSER = alexh
+PGHOST = localhost
+PGPASSWORD = m3gn16t5k3jti
+PGDATABASE = videochat 
+PGPORT = 5432
