--- a/VideoApi/package.json
+++ b/VideoApi/package.json
@@ -6,16 +6,18 @@
   "scripts": {
     "start": "nodemon index.js",
     "lint": "eslint --fix --ext .js,.jsx .",
-    "test" : "jest"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.0",
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "pg": "^8.5.1",
     "socket.io": "^3.0.4",
     "twilio": "^3.51.0",
     "twilio-cli": "^2.13.0"
