--- a/VideoApi/package.json
+++ b/VideoApi/package.json
@@ -17,12 +17,14 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.5.1",
     "socket.io": "^3.0.4",
     "twilio": "^3.51.0",
     "twilio-cli": "^2.13.0"
   },
   "devDependencies": {
+    "debug": "^4.3.1",
     "eslint": "^7.2.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^7.0.0",
