--- a/videoUI/package.json
+++ b/videoUI/package.json
@@ -15,13 +15,14 @@
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
     "dotenv": "^8.2.0",
-    "node-sass": "^4.14.1",
+    "js-cookie": "^2.2.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "sass": "^1.30.0",
     "socket.io-client": "^3.0.4",
     "web-vitals": "^0.2.4"
   },
