changed front end and back end

--- a/VideoApi/package.json
+++ b/VideoApi/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "npm install && nodemon index.js",
+    "dockerinit": " docker run -it --rm -p 5000:5000 -p 54532:5432 -v videoapi_volume:/var/www videoapi ",
     "lint": "eslint --fix --ext .js,.jsx .",
     "test": "jest"
   },
