--- a/videoUI/Dockerfile
+++ b/videoUI/Dockerfile
@@ -1,16 +1,17 @@
 FROM node:latest
 
-RUN mkdir -p /var/www
+RUN mkdir /var/www
 
-WORKDIR /var/www
+WORKDIR /var/www/
 
-COPY package*.json /var/www
+COPY . /var/www/
+
+COPY package*.json /var/www/
 
 RUN npm install
 
-COPY . .
-
 EXPOSE 3000
 
-CMD [ "NPM", "START" ]
+CMD [ "npm", "start"]
+
 
