--- a/videoUI/package.json
+++ b/videoUI/package.json
@@ -28,6 +28,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "initdocker": "docker create --name frontend_container -p 3000:3000 -v frontend_volume:/var/www frontend_image",
+    "dockerstart": "docker start -i frontend_container",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
