--- a/VideoApi/package.json
+++ b/VideoApi/package.json
@@ -20,6 +20,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.5.1",
+    "redis": "^3.0.2",
     "socket.io": "^3.0.4",
     "twilio": "^3.51.0",
     "twilio-cli": "^2.13.0"
