--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,40 @@
 version: '3'
+
 services:
     frontend:
         build: ./videoUI
         ports: 
             - "3000:3000"
         volumes:
-            - ${pwd}/videoUI/frontend_volume:var/www
-        container_name: frontend_compose_container
+            - ./videoUI:/var/www/frontend/
+        restart: always
+        links:
+            - webserver
+    webserver:
+        build : './nginx'
+        ports:
+            - "80:80"
+        volumes:
+            - ./nginx/configuration/:/etc/nginx/conf.d/
         restart: always
         links:
             - backend
     backend:
         build: ./VideoApi
-        ports : 
+        ports: 
             - "5000:5000"
         volumes: 
-            - ${pwd}/VideoApi/videoapi_volume:/var/www
-        container_name: videoapi_compose_container
+            - ./VideoApi:/var/www/api
+        environment:
+            - DOCKER_IP = host.docker.internal
         restart: always
+        links:
+            - redis
+    redis:
+        build: ./redis
+        expose:
+            - "6379"
+        restart: always      
 
 
 
