--- a/nginx/configuration/nginx.conf
+++ b/nginx/configuration/nginx.conf
@@ -8,6 +8,17 @@ location /images{
     try_files $uri /images/default--profilepicture.jpg;
 }
 
+
+location redis://localhost:6379 {
+   proxy_pass http://host.docker.internal:6379;
+   proxy_set_header X-Real-IP $remote_addr;
+   proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+   proxy_set_header X-Forwarded-Proto $scheme;
+   proxy_set_header Host $http_host;
+   proxy_set_header X-NginX-Proxy true;
+   proxy_redirect off;
+}
+
 location / {
 proxy_pass http://host.docker.internal:3000;
    proxy_set_header X-Real-IP $remote_addr;
