--- a/videoUI/package.json
+++ b/videoUI/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^4.5.3",
     "dotenv": "^8.2.0",
     "js-cookie": "^2.2.1",
+    "linkify": "^0.2.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
