--- a/videoUI/.env
+++ b/videoUI/.env
@@ -1,2 +1,2 @@
-REACT_APP_TWILIO_ACCOUNT_SID = AC6e45c3877691fd81ae71c23d5a2524e7
-REACT_APP_TWILIO_AUTH_TOKEN = 7c684545141ba4f7314bf0f2093f3249
+REACT_APP_HELLO = WHATSUPOTTAWA;
+REACT_APP_SITE_URL = http://localhost:5001
