--- a/nginx/configuration/nginx.conf
+++ b/nginx/configuration/nginx.conf
@@ -3,6 +3,8 @@ server {
 listen 0.0.0.0:80 default_server;
 server_name localhost;
 
+
+server{
 location /images{
     root /srv;
     try_files $uri /images/default--profilepicture.jpg;
@@ -10,7 +12,7 @@ location /images{
 
 
 location redis://localhost:6379 {
-   proxy_pass http://host.docker.internal:6379;
+   proxy_pass http://localhost:6379;
    proxy_set_header X-Real-IP $remote_addr;
    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
    proxy_set_header X-Forwarded-Proto $scheme;
@@ -20,7 +22,7 @@ location redis://localhost:6379 {
 }
 
 location / {
-proxy_pass http://host.docker.internal:3000;
+proxy_pass http://localhost:3000;
    proxy_set_header X-Real-IP $remote_addr;
    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
    proxy_set_header X-Forwarded-Proto $scheme;
@@ -29,7 +31,7 @@ proxy_pass http://host.docker.internal:3000;
    proxy_redirect off;
 }
 location /api {
-proxy_pass http://host.docker.internal:5000;
+proxy_pass http://localhost:5001;
    proxy_set_header X-Real-IP $remote_addr;
    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
    proxy_set_header X-Forwarded-Proto $scheme;
@@ -50,4 +52,6 @@ location ~* \.io {
       proxy_set_header Connection "upgrade";
 
 }
+}
+
 }
