--- a/videoUI/package.json
+++ b/videoUI/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "twitterapp",
+  "name": "videochatapp",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:5000",
+  "proxy": "http://localhost:5001",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-brands-svg-icons": "^5.15.1",
@@ -28,7 +28,7 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=3001 && react-scripts start",
     "initdocker": "docker create --name frontend_container -p 3000:3000 -v frontend_volume:/var/www frontend_image",
     "dockerstart": "docker start --interactive frontend_container",
     "build": "react-scripts build",
