--- a/nginx/configuration/nginx.conf
+++ b/nginx/configuration/nginx.conf
@@ -3,8 +3,6 @@ server {
 listen 0.0.0.0:80 default_server;
 server_name localhost;
 
-
-server{
 location /images{
     root /srv;
     try_files $uri /images/default--profilepicture.jpg;
@@ -22,7 +20,7 @@ location redis://localhost:6379 {
 }
 
 location / {
-proxy_pass http://localhost:3000;
+proxy_pass http://host.docker.internal:3000;
    proxy_set_header X-Real-IP $remote_addr;
    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
    proxy_set_header X-Forwarded-Proto $scheme;
@@ -31,7 +29,7 @@ proxy_pass http://localhost:3000;
    proxy_redirect off;
 }
 location /api {
-proxy_pass http://localhost:5001;
+proxy_pass http://host.docker.internal:5001;
    proxy_set_header X-Real-IP $remote_addr;
    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
    proxy_set_header X-Forwarded-Proto $scheme;
@@ -50,8 +48,17 @@ location ~* \.io {
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
       proxy_set_header Connection "upgrade";
-
 }
+location http://host.docker.internal:3000 {
+proxy_pass http://host.docker.internal:5001;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header Host $http_host;
+      proxy_set_header X-NginX-Proxy false;
+      proxy_redirect off;
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "upgrade";
 }
 
 }
