--- a/videoUI/.env
+++ b/videoUI/.env
@@ -1,2 +1,3 @@
 REACT_APP_HELLO = WHATSUPOTTAWA;
 REACT_APP_SITE_URL = http://localhost:5001
+React_APP_SITE_IMAGE_URL = /test123--profilepicture.jpg
