--- a/VideoApi/package.json
+++ b/VideoApi/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "npm install && nodemon index.js",
     "dockerinit": " docker container run --name videoapi_container --rm --interactive -p 5000:5000 -p 54532:5432 -v image_volume:/srv -v videoapi_volume:/var/www videoapi ",
-    "lint": "eslint --fix --ext .js,.jsx .",
+    "lint": "eslint --fix --ext .js,.jsx, .",
     "test": "jest"
   },
   "author": "",
