--- a/VideoApi/Dockerfile
+++ b/VideoApi/Dockerfile
@@ -4,7 +4,7 @@ RUN mkdir -p /var/www/api
 
 WORKDIR /var/www/api
 
-COPY package*.json ./var/www/api
+COPY package*.json /var/www/api
 
 RUN npm install
 
