--- a/videoUI/.env
+++ b/videoUI/.env
@@ -1,3 +1,5 @@
 REACT_APP_HELLO = WHATSUPOTTAWA
 REACT_APP_SITE_URL = http://localhost:5001
 React_APP_SITE_IMAGE_URL = /test123--profilepicture.jpg
+FAST_REFRESH = false
+CHOKIDAR_USEPOLLING = true
