--- a/VideoApi/Dockerfile
+++ b/VideoApi/Dockerfile
@@ -1,12 +1,10 @@
-FROM node:latest
+FROM node:16.13.0
 
 RUN mkdir -p /var/www/api
 
 WORKDIR /var/www/api
 
 COPY package*.json /var/www/api
-
-RUN npm install
 
 COPY . .
 
