--- a/videoUI/package.json
+++ b/videoUI/package.json
@@ -1,7 +1,7 @@
 {
   "name": "videochatapp",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "proxy": "http://localhost:5001",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
