--- a/videoUI/package.json
+++ b/videoUI/package.json
@@ -22,7 +22,7 @@
     "react-dom": "^17.0.2",
     "react-router": "^6.0.1",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "sass": "^1.43.4",
     "serve": "^13.0.2",
     "socket.io-client": "^4.3.2",
