--- a/videoUI/.env
+++ b/videoUI/.env
@@ -1,3 +1,3 @@
 REACT_APP_HELLO = WHATSUPOTTAWA
 REACT_APP_SITE_URL = http://localhost:5001
-REACT_APP_SITE_IMAGE_URL = http://localhost/profile
+REACT_APP_SITE_IMAGE_URL = http://localhost/srv/profile
