--- a/VideoApi/package.json
+++ b/VideoApi/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "pm2-runtime start index.js",
+    "start": "nodemon index.js",
     "dockerinit": " docker container run --name videoapi_container --rm --interactive -p 5000:5000 -p 54532:5432 -v image_volume:/srv -v videoapi_volume:/var/www videoapi ",
     "lint": "eslint --fix --ext .js,.jsx, .",
     "test": "jest"
@@ -20,10 +20,9 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.1",
-    "pm2": "^5.2.0",
     "redis": "^3.1.2",
     "socket.io": "^4.3.1",
-    "twilio": "^3.71.1",
+    "twilio": "^3.75.1",
     "twilio-cli": "^2.33.0"
   },
   "devDependencies": {
@@ -35,6 +34,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "index.js": "0.0.3",
     "jest": "^27.3.1",
+    "nodemon": "^2.0.15",
     "prettier": "2.4.1"
   }
 }
